Fix initialization of options

--- a/index.htm
+++ b/index.htm
@@ -15,9 +15,7 @@ goodGlobal="I am fine";
 another7="I am fine";
 
 var leakyOptions={
-		filterEntries: true,
-		allowedObjs: ['leaky','leakyOptions','event','goodGlobal'],
-        allowedRegex: ['another[0-9]'],
+		filterEntries: true
 };
 
 console.dir(leaky.getGlobals(leakyOptions));
